test with button

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,10 @@
 
 <body>
   <main>
-    <h1>Vanilla JavaScript App</h1>
+    <h1>Test JavaScript App</h1>
+    <button id="myButton">Click Me</button>
+    <div id="output"></div>
+
   </main>
 </body>
 
